Restore lost files, add roles, update user model, add application.properties.example